<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/dob"
        android:textSize="20sp" />
    <EditText
        android:layout_marginTop="10dp"
        android:id="@+id/edtdob"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dob"/>
    
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sex"
        android:textSize="20sp" />
    
    <LinearLayout
		android:layout_marginTop="10dp"
		android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/btnMale"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/male"
	        android:textSize="20sp"
	        android:layout_weight="1"
	        android:textColor="#f00"/>
        <TextView
            android:id="@+id/btnFemale"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/female"
	        android:textSize="20sp"
	        android:layout_weight="1"
	        android:textColor="#ccc"/>
        
    </LinearLayout>
    
	<LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <Button
            android:id="@+id/btnConfirm"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/confirm"
	        android:textSize="20sp"
	        android:layout_weight="1"/>
        <Button
            android:id="@+id/btnCancel"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/cancel"
	        android:textSize="20sp"
	        android:layout_weight="1"/>
    </LinearLayout>
    

</LinearLayout>