<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:background="#ccc"
        android:layout_weight="1">
        <Button android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="@string/details"
            android:layout_weight="1"
            android:textSize="12sp"/>
        <TextView android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="@string/app_name"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_weight="2"/>
        <Button android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="@string/today"
            android:layout_weight="1"
            android:textSize="12sp"/>
    </LinearLayout>
    
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:background="#999999"
        android:layout_weight="6">
        <TextView android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Tháng 6 năm 2013"
            android:gravity="center"
            android:textSize="16sp"/>
        <TextView android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="25"
            android:gravity="center"
            android:textSize="120sp"/>
        <TextView android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Thứ 5"
            android:gravity="center"
            android:textSize="45sp"/>
        <TextView android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="danh ngôn danh ngôn danh ngôn"
            android:gravity="center"
            android:textSize="13sp"/>

	</LinearLayout>
    
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="2">
        
        <LinearLayout android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:layout_weight="1">
	        <TextView android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:textSize="14sp"
	            android:text="@string/hour"
	            android:gravity="center"
	            android:background="#ccc"/>
	        <TextView android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:textSize="24sp"
	            android:text="10:30"
	            android:gravity="center"/>
	        <TextView android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:textSize="14sp"
	            android:text="Tân Tỵ"
	            android:gravity="center"/>
        </LinearLayout>
        <LinearLayout android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:layout_weight="1">
			<TextView android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:textSize="14sp"
	            android:text="@string/day"
	            android:gravity="center"
	            android:background="#ccc"/>
			<TextView android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:textSize="24sp"
	            android:text="14"
	            android:gravity="center"/>
	        <TextView android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:textSize="14sp"
	            android:text="Canh Thân"
	            android:gravity="center"/>
		</LinearLayout>
		<LinearLayout android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:layout_weight="1">
			<TextView android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:textSize="14sp"
	            android:text="@string/month"
	            android:gravity="center"
	            android:background="#ccc"/>
			<LinearLayout android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal">
			    <TextView android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:textSize="14sp"
	            android:text="1"
	            android:gravity="center"
	            android:layout_weight="1"/>
	        <TextView android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:textSize="14sp"
	            android:text="Giáp Dần"
	            android:gravity="center"
	            android:layout_weight="2"/>
			</LinearLayout>
			<TextView android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:textSize="24sp"
	            android:text="2013"
	            android:gravity="center"/>
	        <TextView android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:textSize="14sp"
	            android:text="Quý Tỵ"
	            android:gravity="center"/>
		</LinearLayout>
	</LinearLayout>
</LinearLayout>